@@ -1630,6 +1630,61 @@ gconf_key_is_below   (const gchar* above, const gchar* below)
   return strncmp(below, above, strlen(above)) == 0;
 }
 
+gchar*
+gconf_unique_key (void)
+{
+  /* This function is hardly cryptographically random but should be
+     "good enough" */
+  
+  static guint serial = 0;
+  gchar* key;
+  guint t, ut, p, u, r;
+  struct timeval tv;
+  
+  gettimeofday(&tv, NULL);
+  
+  t = tv.tv_sec;
+  ut = tv.tv_usec;
+
+  p = getpid();
+  
+  u = getuid();
+
+  /* don't bother to seed; if it's based on the time or any other
+     changing info we can get, we may as well just use that changing
+     info. since we don't seed we'll at least get a different number
+     on every call to this function in the same executable. */
+  r = rand();
+  
+  /* The letters may increase uniqueness by preventing "melds"
+     i.e. 01t01k01 and 0101t0k1 are not the same */
+  key = g_strdup_printf("%ut%uut%uu%up%ur%uk%u",
+                        /* Duplicate keys must be generated
+                           by two different program instances */
+                        serial,
+                        /* Duplicate keys must be generated
+                           in the same microsecond */
+                        t,
+                        ut,
+                        /* Duplicate keys must be generated by
+                           the same user */
+                        u,
+                        /* Duplicate keys must be generated by
+                           two programs that got the same PID */
+                        p,
+                        /* Duplicate keys must be generated with the
+                           same random seed and the same index into
+                           the series of pseudorandom values */
+                        r,
+                        /* Duplicate keys must result from running
+                           this function at the same stack location */
+                        (guint)&key);
+
+  ++serial;
+  
+  return key;
+}
+
 /*
  * Table of connections 
  */ 
