@@ -103,6 +103,11 @@ gboolean     gconf_key_is_below   (const gchar* above, const gchar* below);
 /* Returns allocated concatenation of these two */
 gchar*        gconf_concat_key_and_dir(const gchar* dir, const gchar* key);
 
+/* Returns a different string every time (at least, the chances of
+   getting a duplicate are like one in a zillion). The key is a
+   legal gconf key name (a single element of one) */
+gchar*        gconf_unique_key (void);
+
 /* 
  * Higher-level stuff 
  */
