@@ -4,7 +4,11 @@ EFENCE=
 INCLUDES = -I$(top_srcdir) -I$(top_builddir) -I$(includedir)  $(ORBIT_CFLAGS) $(GLIB_CFLAGS) \
 	 -DG_LOG_DOMAIN=\"GConf-Tests\" -DGCONF_ENABLE_INTERNALS=1
 
-noinst_PROGRAMS=testgconf testlisteners testschemas testchangeset testencode
+noinst_PROGRAMS=testgconf testlisteners testschemas testchangeset testencode testunique
+
+testunique_SOURCES=testunique.c
+
+testunique_LDADD = $(ORBIT_LIBS) $(GLIB_LIBS) $(top_builddir)/gconf/libgconf.la  $(EFENCE)
 
 testgconf_SOURCES=testgconf.c
 
