@@ -1,3 +1,8 @@
+2000-01-13  Havoc Pennington  <hp@pobox.com>
+
+	* gconf/gconf.c (gconf_unique_key): function to generate
+	a pseudo-random very-very-likely-to-be-unique key name.
+
 2000-01-13  Havoc Pennington  <hp@redhat.com>
 
 	* gconf/gconf-internals.c (gconf_concat_key_and_dir): move
